--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.3.5</version>
 		<relativePath />
 	</parent>
 	<groupId>net.samitkumar</groupId>
-	<artifactId>hr-management</artifactId>
-	<version>1.0.0</version>
-	<name>hr-management</name>
-	<description>hr-management</description>
+	<artifactId>employee</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>employee</name>
+	<description>employee CRUD operation with Spring Webflux</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
