--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,8 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
-      - oas
+      - 'oas/**'
+      - 'deployment/**'
 
 permissions:
   contents: write
