--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,14 +11,14 @@ logging:
 spring:
   application:
     name: @project.name@
-  security:
-    user:
-      password: password
-      name: admin
-      roles:
-        - ADMIN
-        - READ
-        - WRITE
+#  security:
+#    user:
+#      password: password
+#      name: admin
+#      roles:
+#        - ADMIN
+#        - READ
+#        - WRITE
   reactor:
     context-propagation: auto
   datasource:
